# carnegie_setup_app

./: Dockerfile  pyproject.toml  setup_game.py  setup_game_test.py
src/: manage.py
src/base_app/: asgi.py  settings.py  urls.py  wsgi.py
src/carnegie_setup/: apps.py  urls.py  views.py
src/carnegie_setup/templates/carnegie_setup/: index.html
src/carnegie_setup/utils/: setup_game.py
