[tool.poetry]
name = "carnegie-setup"
version = "0.1.0"
description = ""
authors = ["Brett Reichert <brett.reichert@avant.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
parameterized = "^0.8.1"
django-bootstrap-v5 = "^1.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
